Bug 401697 - Clicking on Examples link doesn't opens examples page
Summary: Clicking on Examples link doesn't opens examples page
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.14.4
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-03 15:48 UTC by Alexander Mentyu
Modified: 2019-06-24 11:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.0
Sentry Crash Report:


Attachments
working screenshot (33.86 KB, image/png)
2019-06-07 11:21 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-12-03 15:48:23 UTC
SUMMARY
Tested on Wayland, with Chromium and Firefox browsers installed, Chromium browser set as default.

STEPS TO REPRODUCE
1. Crash some app.
2. Open DrKonqi.
3. Go to 'What do you know about the crash' page.
4. Click on right bottom 'Examples' link.

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
Page with examples opens.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-39-generic
Comment 1 Patrick Silva 2019-03-05 14:43:38 UTC
hum, I see no 'What do you know about the crash' page here.

Operating System: Arch Linux 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1
Comment 2 Harald Sitter 2019-06-07 11:21:04 UTC
Created attachment 120654 [details]
working screenshot

It's not a link, it simply displays a tooltip ;)
Comment 3 Nate Graham 2019-06-10 22:20:38 UTC
Then the UI is wrong, since links open websites or take you to another page. :) The tooltip maybe should just be a small subtitle under the bottom checkbox
Comment 4 Harald Sitter 2019-06-24 11:09:00 UTC
Git commit a00df4badcd1c82c073fda4018c0192994d4c647 by Harald Sitter.
Committed on 24/06/2019 at 11:08.
Pushed by sitter into branch 'master'.

show details examples in label itself instead of unexpected tooltip

Summary:
the previous UX wasn't good. the label contained a "link" highlight
but that link was only a trigger to a tooltip. IOW it behaved more like
a button than a link.

instead of using a tooltip fully expand the examples into an indented label
below the relevant checkbox.
FIXED-IN: 5.17.0

Reviewers: ngraham, #vdg

Reviewed By: ngraham, #vdg

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21745

M  +5    -11   src/bugzillaintegration/reportassistantpages_base.cpp
M  +0    -2    src/bugzillaintegration/reportassistantpages_base.h
M  +58   -60   src/bugzillaintegration/ui/assistantpage_bugawareness.ui

https://commits.kde.org/drkonqi/a00df4badcd1c82c073fda4018c0192994d4c647